--- a/Views/Admin/Brand.ejs
+++ b/Views/Admin/Brand.ejs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<%-include('../partials/admin-sample-nav')-%>\
+<%-include('../partials/admin-sample-nav')-%>
 <%brand.forEach((data)=>{%>
 <div class="modal fade" id="deleteconfirmation<%=data._id%>" tabindex="-1" role="dialog" aria-labelledby="deleteconfirmationLabel<%=data._id%>" aria-hidden="true">
   <div class="modal-dialog" role="document">
