--- a/Views/partials/slider.ejs
+++ b/Views/partials/slider.ejs
@@ -1,41 +1,41 @@
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img style="width: 100%;
-            height: 500px;" src="/static/images/banner_01.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <div class="custom-carousel-content">
-                </div>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img style="width: 100%;
-            height: 500px;" src="/static/images/banner_02.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <div class="custom-carousel-content">
-                
-                </div>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img style="width: 100%;
-            height: 500px;" src="/static/images/banner_3.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <div class="custom-carousel-content">
-                </div>
-            </div>
-        </div>
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+    <div class="carousel-indicators">
+    <%if(banner.length>0){%>
+    <%banner.forEach((data,i)=>{%>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="<%=i%>" <%if(i==0){%>class="active"<%}%> aria-current="true" aria-label="Slide <%=++i%>"></button>
+    <%})%>
+    <%}else{%>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <%}%>
+    
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+    <div class="carousel-inner">
+    <%if(banner.length>0){%>
+        <%banner.forEach((data,i)=>{%>
+            <div class="carousel-item <%if(i==0){%>active<%}%>">
+                <img src="<%=data.image?'/static/product-images/'+data.image:'/static/images/img-bg.jpg'%>" class="d-block w-100" alt="...">
+            </div>
+        <%})%>
+    <%}else{%>
+      <div class="carousel-item active">
+        <img src="http://localhost:7000/static/product-images/1700029196994-12733d.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="http://localhost:7000/static/product-images/1700029165937-644aa9.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="http://localhost:7000/static/product-images/1700028048284-8e9f31.png" class="d-block w-100" alt="...">
+      </div>
+    <%}%>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
     </button>
-</div>
-
+  </div>
