--- a/Views/User/home.ejs
+++ b/Views/User/home.ejs
@@ -35,7 +35,7 @@
                           <% } %>
                             <a href="/product/details/<%= product._id%>" style="text-decoration: none;">
                               <div class="d-flex justify-content-center mt-2 " >
-                                <img width="200px" height="200px"
+                                <img style="width: 70%; max-height: 270px;"
                                     src="<%=product.images[0].mainimage?'/static/product-images/'+product.images[0].mainimage:'/static/images/img-bg.jpg'%>"
                                     alt="">
                               </div>
@@ -103,8 +103,8 @@
 
                           <% } %>
                             <a href="/product/details/<%= product._id%>" style="text-decoration: none;">
-                              <div class="product-card-img" style="padding: 30px;">
-                                <td><img width="200px" height="200px"
+                              <div class="product-card-img d-flex justify-content-center  " style="padding: 30px;">
+                                <td><img style="width: 70%;max-height: 270px;"
                                     src="<%=product.images[0].mainimage?'/static/product-images/'+product.images[0].mainimage:'/static/images/img-bg.jpg'%>"
                                     alt=""></td>
                               </div>
@@ -161,7 +161,68 @@
                   <% }); %>
               </div>
               <%}%>
-              
+              <%if(category.length>0){%>
+                <div class="row">
+                  <div class="col-md-12">
+                    <h3 class="mb-4">Our Categories</h3>
+                  </div>
+                  <% category.forEach(data=> { %>
+                    <div class="col-md-4 mt-3 mb-3 ">
+  
+                      <div class="product-card shadow-lg p-3 bg-body rounded-3">
+                        
+                              <a href="/products/category/<%=data._id%>" style="text-decoration: none;">
+                                <div class="product-card-img d-flex  justify-content-center " style="padding: 30px;">
+                                  <img style="width: 70%;max-height: 270px;"
+                                      src="<%=data.images[0].mainimage?'/static/category-images/'+data.images[0].mainimage:'/static/images/img-bg.jpg'%>"
+                                      alt="">
+                                </div>
+                                <div class="product-card-body">
+                      
+                                  <h5 class="product-name d-flex justify-content-center">
+  
+                                    <%= data.name %>
+  
+                                  </h5>
+                                  
+                                </div>
+                              </a>
+                      </div>
+                    </div>
+                    <% }); %>
+                </div>
+                <%}%>
+                <%if(brand.length>0){%>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <h3 class="mb-4">Our trusted Brands</h3>
+                    </div>
+                    <% brand.forEach(data=> { %>
+                      <div class="col-md-4 mt-3 mb-3 ">
+    
+                        <div class="product-card shadow-lg p-3 bg-body rounded-3">
+                          
+                                <a href="/products/brand/<%=data._id%>" style="text-decoration: none;">
+                                  <div class="product-card-img d-flex  justify-content-center align-items-center " style="padding: 30px; min-height: 287px;">
+                                    <img style="width: 70%;max-height: 270px; height: auto;"
+                                        src="<%=data.images[0].mainimage?'/static/brand-images/'+data.images[0].mainimage:'/static/images/img-bg.jpg'%>"
+                                        alt="">
+                                  </div>
+                                  <div class="product-card-body">
+                        
+                                    <h5 class="product-name d-flex justify-content-center">
+    
+                                      <%= data.name %>
+    
+                                    </h5>
+                                    
+                                  </div>
+                                </a>
+                        </div>
+                      </div>
+                      <% }); %>
+                  </div>
+                  <%}%>
             </div>
           </div>
         <script src="/static/js/productManupulation.js"></script>
