--- a/Views/User/profile.ejs
+++ b/Views/User/profile.ejs
@@ -29,8 +29,11 @@
                     <div class="card-body text-center">
                         <!-- Profile picture image-->
                         <label for="main">
-                            <div class="img-main rounded-circle" style="background-color: #e9ecef;">
-                                <img id="mn" class="img-account-profile rounded-circle mb-2" src="<%=UserData.profile[0].mainimage?'/static/product-images/'+UserData.profile[0].mainimage:'http://bootdey.com/img/Content/avatar/avatar1.png'%>" alt="">
+                            <div class="img-main" style="background-color: #e9ecef;    width: 229px;
+                            height: 229px;
+                            border-radius: 50%;
+                            ">
+                                <img id="mn" class="img-account-profile rounded-circle mb-2" src="<%=UserData.profile.length>0?'/static/profile-images/'+UserData.profile[0].mainimage:'http://bootdey.com/img/Content/avatar/avatar1.png'%>" alt="" style="height:100%;width: 100%;border-radius: 15px;  margin-right: 10px;">
                             </div>
                           </label>
                         <!-- Profile picture help block-->
@@ -78,9 +81,12 @@
                                 <!-- Form Group (birthday)-->
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="inputBirthday">DOB</label>
+                                    <%if(UserData.dob){%>
                                     <%var date=UserData.dob.toString().slice(0, 10)%>
                                     <input class="form-control-cus" id="dob" type="date" name="dob" placeholder="DD-MM-YYYY" value="<%=date%>" required>
-
+                                    <%}else{%>
+                                        <input class="form-control-cus" id="dob" type="date" name="dob" placeholder="DD-MM-YYYY" value="" required>
+                                    <%}%>
                                 </div>
                                 <!-- <input type="date" name="date" id="date" 
              required 
