--- a/Views/partials/footer.ejs
+++ b/Views/partials/footer.ejs
@@ -6,7 +6,7 @@
                     <h4 class="footer-heading">TreasureCart.inc</h4>
                     <div class="footer-underline"></div>
                     <p>
-                        Designed and developed by Safvancmc 
+                        Designed and developed by Safvan cmc 
 
                     </p>
                     <div class="d-flex">
@@ -27,10 +27,10 @@
                 <div class="col-md-3">
                     <h4 class="footer-heading">Terms & Conditions</h4>
                     <div class="footer-underline"></div>
-                    <div class="mb-2"><a href="" class="text-white">Shipping Policy</a></div>
+                    <div class="mb-2"><a href="/about-us" class="text-white">About US</a></div>
                     <div class="mb-2"><a href="" class="text-white">Refund Policy</a></div>
                     <div class="mb-2"><a href="" class="text-white">Terms & Condition</a></div>
-                    <div class="mb-2"><a href="" class="text-white">Privacy Policy</a></div>
+                   
                 </div>
                 <div class="col-md-3">
                     <h4 class="footer-heading">Reach Us</h4>
