--- a/Views/partials/header.ejs
+++ b/Views/partials/header.ejs
@@ -14,6 +14,20 @@
         text-decoration: none;
         cursor: pointer;
     }
+    .toTop{
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        bottom: 10px;
+        right: 10px;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        z-index: 999999999;
+        background-color: #020A20;
+        font-size: 1.2rem;
+    }
 </style>
 <div class="main-navbar shadow-sm sticky-top">
     <div class="top-navbar">
@@ -129,14 +143,18 @@
                         <a class="nav-link" href="/profile">My account</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact-us">Contact Us</a>
+                        <a class="nav-link" href="/about-us">About Us</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 </div>
-
+<a href="#">
+    <div class="toTop">
+        <i class="fa-solid fa-arrow-up" style="color: #ffffff;"></i>
+    </div>
+</a>
 <script>
     const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
     const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
