--- a/Views/partials/admin-sample-nav.ejs
+++ b/Views/partials/admin-sample-nav.ejs
@@ -7,6 +7,8 @@
     
     <a href="/admin/customers" class="d-flex align-items-center"><iconify-icon icon="icon-park-outline:peoples" style="color: #787878;" width="25" height="25"></iconify-icon><span class="mx-2">Customers</span></a>
     <a href="/admin/orders" class="d-flex align-items-center"><iconify-icon icon="mdi:cart" style="color: #787878;" width="25" height="25"></iconify-icon><span class="mx-2">Orders</span></a>
+    <a href="/admin/returns" class="d-flex align-items-center"><iconify-icon icon="mdi:cart" style="color: #787878;" width="25" height="25"></iconify-icon><span class="mx-2">Orders Returns</span></a>
+
     <a href="/admin/coupon" class="d-flex align-items-center"><iconify-icon icon="mdi:coupon-outline" style="color: #787878;" width="25" height="25"></iconify-icon><span class="mx-2">Coupon</span></a>
     <a href="/admin/banner" class="d-flex align-items-center"><iconify-icon icon="game-icons:vertical-banner" style="color: #787878;" width="25" height="25"></iconify-icon><span class="mx-2">Banner</span></a>
     <a href="/admin/logout" class="d-flex align-items-center"><iconify-icon icon="ic:baseline-logout" style="color: #787878;" width="25" height="25"></iconify-icon><span class="mx-2">Log out</span></a>
