Wallet history added

--- a/Views/Admin/Admin-dash.ejs
+++ b/Views/Admin/Admin-dash.ejs
@@ -138,6 +138,8 @@
                                   <span class="bg-primary text-white p-2 rounded-2 "><%=data.status%></span>
                                 <%}else if(data.status==="Cancelled"){%>
                                   <span class="bg-warning  text-white p-2 rounded-2 "><%=data.status%></span>
+                                  <%}else if(data.status==="Returned"){%>
+                                    <span class="bg-danger   text-white p-2 rounded-2 "><%=data.status%></span>
                                 <%}else if(data.status==="Rejected"){%>
                                   <span class="bg-danger   text-white p-2 rounded-2 "><%=data.status%></span>
                                 <%}else if(data.status==="Shipped"){%>
