--- a/Views/Admin/edit-brand.ejs
+++ b/Views/Admin/edit-brand.ejs
@@ -33,7 +33,7 @@
       <label for="main">
 
         <div class="img-main">
-          <img class="priview" src="<%=brand.images[0].mainimage?'/static/product-images/'+brand.images[0].mainimage:'/static/images/img-bg.jpg'%>"  id="mn">
+          <img class="priview" src="<%=brand.images[0].mainimage?'/static/brand-images/'+brand.images[0].mainimage:'/static/images/img-bg.jpg'%>"  id="mn">
         </div>
       </label>
     </div>
