--- a/Views/User/wallet.ejs
+++ b/Views/User/wallet.ejs
@@ -9,7 +9,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <%-include('../layout/header_links')-%>
-        <link rel="stylesheet" href="/static/css/usercoupons.css">
+        <link rel="stylesheet" href="/static/css/userWallet.css">
     </head>
     <body>
     <%-include('../partials/header')-%>
@@ -32,17 +32,9 @@
                             <!-- Profile picture image-->
                             <div class="img-main shadow   " style="background-color: #e9ecef;    width: 229px;
                             height: 229px;
-                            border-radius: 50%;
-
-                            ">
+                            border-radius: 50%;">
                                 <img id="mn" class="img-account-profile rounded-circle mb-2" src="<%=USER.profile.length>0?'/static/profile-images/'+USER.profile[0].mainimage:'http://bootdey.com/img/Content/avatar/avatar1.png'%>" alt="" style="height:100%;width: 100%;border-radius: 15px;  margin-right: 10px;">
-                            </div>
-
-                              
-                            
-
-                            
-                            
+                            </div>   
                         </div>
                         <div class="card-body">
                             <div class="d-flex justify-content-center">
@@ -57,34 +49,51 @@
                     </div>
                 </div>
                 <div class="col-xl-8">
-                    <div class="card shadow">
+                    <div class="card shadow mt-3">
                         <div class="card-body">
-                               <% if (referred && referred.name) { %>
-                                   <h4 class="card-title">Referred By: <%= referred.name %></h4>
-                               <% } else { %>
-                                   <p>No referrer information available</p>
-                               <% } %>
-                           </div>
-                         </div>
-           
-                         <div class="card shadow mt-3">
-                           <div class="card-body">
-                               <% if (user.referredUsers && user.referredUsers.length > 0) { %>
-                                   <h5 class="card-title">Referred Users:</h5>
-                                   <ul>
-                                       <% user.referredUsers.forEach(referredUser => { %>
-                                           <li><%= referredUser.name %></li>
-                                       <% }); %>
-                                   </ul>
-                               <% } else { %>
-                                   <p>No referred users</p>
-                               <% } %>
-                           </div>
-                       </div>
+                            <h4 class="card-title">Wallet Transactions:</h4>
+                            <br>
+                            <% if (transactions) { %>
+                                <table class="table   table-shadow mt-3" style="font-size: 12px;">
+                                    <thead>
+                                        <tr>
+                                            
+                                            <th class="text-center">Transaction ID</th>
+                                            <th class="text-center">Amount</th>
+                                            <th class="text-center">Description</th>
+                                            
+                                            <th class="text-center">Date</th>
+                        
+                                        </tr>
+                                    </thead>
+                                    <% transactions.forEach(transaction => { %>
+                                    <tbody>
+                                        
+                                            <tr>
+                                              <td> <div class="table-data"> <%= transaction._id %></div> </td>
+
+                                              <td> <div class="table-data <%= transaction.transactionType === 'credit' ? 'text-success ' : 'text-danger ' %>"> <b>  <%= transaction.transactionType === 'credit' ? '+ ' : '-' %> ₹ <%=parseFloat(transaction.amount).toLocaleString()%></b></div> </td>
+                                              <td> <div class="table-data"> <%= transaction.description %></div> </td>
+                                              
+                                              <td> <div class="table-data"> <%= transaction.timestamp.toDateString() %></div> </td>
+                                              
+                    
+                                              
+                                            </tr>
+                                        
+                                    </tbody>
+                                    <%})%>
+                    
+                    
+                                </table>
+                            <% } else { %>
+                                <p>No transactions available</p>
+                            <% } %>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-
     
 <%-include('../partials/footer')-%>
  <%-include('../layout/footer')-%>
